src/snapshots/droid_tui__regression__visual_diff_graph_highlight_snapshot@diff_terminal_160.snap
---
source: src/regression.rs
expression: ansi_on
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                  DROID: cable_banner_combos                                                                  │
└─────────────────────────────────────────────────────────────────────────────────────────────────────┌Mixer─────────────────────────────────────────────────┐─┘
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────┐┌ Grap│ ─────────────────────────────────────────────────────│─┐
│┌─┐┌────┐┐                                                                                    ││     │                               ╭contour─────────────╮ │ │
││ …  CV …                                                                                     ││     │                               │                    │ │ │
││ ││    ││                                                                                    ││┌(unn│med)───────────────┐    ┌──────◉──────┐             │ │ │
││ ││    ││                                                                                    │││    │                   │    │      │      │             │ │ │
││ ││    ││                                                                                    │││ ╭button──────────────╮ │    │      ╰────────────────────╯ │ │
││ ││    ││                                                                                    │││ │  │                 │ │    │             │               │ │
││ ││    ││                                                                                    │││ │  │                 ●──┐───┘             │               │ │
││ ││    ││                                                                                    │││ │  │                 │ ││                 │               │ │
││ ││    ││                                                                                    │││ ╰────────────────────╯ ││                 │               │ │
││ ││    ││                                                                                    │││    │                   ││                 │               │ │
││ ││    ││                                                                                    ││└────│───────────────────┘│                 │               │ │
││ ││    ││                                                                                    ││     │                    │                 │               │ │
││ ││    ││                                                                                    ││     │                    │                 │               │ │
││ ││    ││                                                                                    ││     │                    │                 │               │ │
││ ││  ▶ ││                                                                                    ││     │                    │                 │               │ │
││ ││  … ││                                                                                    ││     │                    │   ╭mixer*──────────────╮        │ │
││ ││    ││                                                                                    ││     │                    │   │             │      │        │ │
││ ││    ││                                                                                    ││     │                    └───◉             └──────●        │ │
││ ││    ││                                                                                    ││     │                       ││                    │        │ │
││ ││    ││                                                                                    ││     │                       │╰────────────────────╯        │ │
││ ││    ││                                                                                    ││     │                       │                              │ │
││ ││    ││                                                                                    ││     │                       │                              │ │
││ ││    ││                                                                                    ││     │                       │                              │ │
││ ││    ││                                                                                    ││     │                       │                              │ │
││ ││    ││                                                                                    ││     │                       │                              │ │
││ ││    ││                                                                                    ││     │                       │                              │ │
││ ││    ││                                                                                    ││     │                       │                              │ │
││ ││    ││                                                                                    ││     │ ╭clocktool───────────╮│                              │ │
││ ││    ││                                                                                    ││     │ │                    ││                              │ │
││ ││    ││                                                                                    ││     │ │                    ●┘                              │ │
││ ││    ││                                                                                    ││     │ │                    │                               │ │
│└─┘└────┘┘                                                                                    ││     │ ╰────────────────────╯                               │ │
└──────────────────────────────────────────────────────────────────────────────────────────────┘└─────│──────────────────────────────────────────────────────│─┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded cable_banner_combos | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 0 back edge(s) | Scale: 1.0 | Orientation: Portrait                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
