src/snapshots/droid_tui__regression__visual_diff_graph_highlight_snapshot@diff_terminal_40.snap
---
source: src/regression.rs
expression: ansi_on
---
┌──────────────────────────────────────┐
│┌Mixer────────────────────────────────┐
└│─────────────────────────────────────│
┌│unnamed)────────────╭contour─────────╮
││                    │  │             │
╭button──────────────╮◉───────┐        │
││                   ││  │    │        │
││                 ┌─●╰────────────────╯
││                 │ │   │    │        │
╰────────────────────╯   │    │        │
││                 │     │    │        │
└│─────────────────│─────┘    │        │
 │                 │          │        │
 │               ╭mixer*──────────────╮│
 │               │ │          │       ││
 │               ◉─┘┐         └───────●│
 │               │  │                 ││
 │               ╰────────────────────╯│
 │                  │                  │
 │                  │                  │
 │ ╭clocktool───────────╮              │
 │ │                │   │              │
 │ │                └───●              │
 │ │                    │              │
 │ ╰────────────────────╯              │
 │                                     │
 └─────────────────────────────────────┘










┌──────────────────────────────────────┐
│Loaded cable_banner_combos | latency a│
└──────────────────────────────────────┘
