src/snapshots/droid_tui__regression__visual_disabled_circuit_graph_snapshot@disabled_classic_100.snap
---
source: src/regression.rs
assertion_line: 4694
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                       ┌Mixer──────────────────────────────────────────────────┐                  │
└───────────────────────│───────────────────────────────────────────────────────│──────────────────┘
                  ┌(unna│ed)───────────────┐             ╭contour─────────────╮ │
                  │     │                  │             │                    │ │
                  │ ╭button──────────────╮ │     ┌───────◉────┐               │ │
                  │ │   │                │ │     │       │    │               │ │
                  │ │   │                ●─┐─────┘       ╰────────────────────╯ │
                  │ │   │                │ │                  │                 │
                  │ ╰────────────────────╯ │                  │                 │
                  │     │                  │                  │                 │
                  └─────│──────────────────│                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │  ╭mixer───────────────╮            │
                        │                  │  │               │    │            │
                        │                  └──◉               └────●            │
                        │                     │                    │            │
                        │                     ╰────────────────────╯            │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │ ╭clocktool───────────╮                                │
                        │ │                   ││                                │
                        │ │                   └●                                │
                        │ │                    │                                │
                        │ ╰────────────────────╯                                │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 0 back edge(s) │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
