src/snapshots/droid_tui__regression__visual_disabled_circuit_graph_snapshot@disabled_classic_40.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────┐
│┌Mixer────────────────────────────────┐
└│─────────────────────────────────────│
┌│unnamed)────────────╭contour─────────╮
││                    │  │             │
╭button──────────────╮◉───────┐        │
││                   ││  │    │        │
││                 ┌─●╰────────────────╯
││                 │ │   │    │        │
╰────────────────────╯   │    │        │
││                 │     │    │        │
└│─────────────────│─────┘    │        │
 │                 │          │        │
 │               ╭mixer───────────────╮│
 │               │ │          │       ││
 │               ◉─┘┐         └───────●│
 │               │  │                 ││
 │               ╰────────────────────╯│
 │                  │                  │
 │                  │                  │
 │ ╭clocktool───────────╮              │
 │ │                │   │              │
 │ │                └───●              │
 │ │                    │              │
 │ ╰────────────────────╯              │
 │                                     │
 └─────────────────────────────────────┘










┌──────────────────────────────────────┐
│Loaded cable_banner_combos | latency a│
└──────────────────────────────────────┘
