src/snapshots/droid_tui__regression__visual_disabled_circuit_graph_snapshot@disabled_error_classic_100.snap
---
source: src/regression.rs
assertion_line: 4713
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                      ┌Sources─────────────────────┐ology_error                                   │
└──────────────────────│────────────────────────────│──────────────────────────────────────────────┘
                       │     ╭clocktool───────────╮ │
                       │     │                    │ │
                       │     │                    ●┐│
                       │     │                    │││
                       │     ╰────────────────────╯││
                       │                           ││
                       │                           ││
                       │          ┌Sinks───────────│───────────────────────┐
                       │          │                ││                      │
                       │          │                │╭copy────────────────╮ │
                       │          │                ││                    │ │
                       │          │              ┌──◉                    │ │
                       │ ╭divider─────────────╮  │  │                    │ │
                       │ │        │           │  │  ╰────────────────────╯ │
                       │ │        │           ●──┘  │                      │
                       │ │        │           │     │                      │
                       │ ╰────────────────────╯     │                      │
                       │          │                 │                      │
                       └──────────│─────────────────┘                      │
                                  │                                        │
                                  │                                        │
                                  │                                        │
                                  │                                        │
                                  │                                        │
                                  │                                        │
                                  │                                        │
                                  │                                        │
                                  │                                        │
                                  │ ╭p2b8────────────────╮                 │
                                  │ │                    │                 │
                                  │ │                    │                 │
                                  │ │                    │                 │
                                  │ ╰────────────────────╯                 │
                                  │                                        │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 100 cols — use ≥ 290 cols or reduce scal│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
