src/snapshots/droid_tui__regression__visual_disabled_circuit_graph_snapshot@disabled_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                       ┌Mixer──────────────────────────────────────────────────┐                  │
└───────────────────────│───────────────────────────────────────────────────────│──────────────────┘
                  ┌(unna│ed)───────────────┐             ╭contour─────────────╮ │
                  │     │                  │             │                    │ │
                  │ ╭button──────────────╮ │     ┌───────◉────┐               │ │
                  │ │   │                │ │     │       │    │               │ │
                  │ │   │                ●─┐─────┘       ╰────────────────────╯ │
                  │ │   │                │ │                  │                 │
                  │ ╰────────────────────╯ │                  │                 │
                  │     │                  │                  │                 │
                  └─────│──────────────────│                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │                  │                 │
                        │                  │  ╭mixer───────────────╮            │
                        │                  │  │               │    │            │
                        │                  └──◉               └────●            │
                        │                     │                    │            │
                        │                     ╰────────────────────╯            │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │                     │                                 │
                        │ ╭clocktool───────────╮                                │
                        │ │                   ││                                │
                        │ │                   └●                                │
                        │ │                    │                                │
                        │ ╰────────────────────╯                                │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded cable_banner_combos | Renders degraded at 100 cols — use ≥ 36 cols or reduce scale | latenc│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
