src/snapshots/droid_tui__regression__visual_disabled_circuit_graph_snapshot@disabled_mono_160.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                  DROID: cable_banner_combos                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────┐┌ Graph ───────────────────────────────────────────────────────┐
│┌─┐┌────┐┐                                                                                    ││                                                              │
││ …  CV …                                                                                     ││                                                              │
││ ││    ││                                                                                    ││                                                              │
││ ││    ││                                                                                    ┌Mixer──────────────────────────────────────────┐               │
││ ││    ││                                                                                    ││                                              │               │
││ ││    ││                                                                                    ││                ╭mixer───────────────╮        │               │
││ ││    ││                                                                                    ││                │                    │        │               │
││ ││    ││                                                                                    ││                ◉────┐        ┌──────●        │               │
││ ││    ││                                                                                    ││╭clocktool──────│────╮        │      │        │               │
││ ││    ││                                                                                    │││               ╰────────────────────╯        │               │
││ ││    ││                                                                                    │┌│unnamed)─────────└──●────────│───────────────│───────────────┐
││ ││    ││                                                                                    │││                    │        │               │               │
││ ││    ││                                                                                    ││╰────────────────────╯─────╮  │               │               │
││ ││    ││                                                                                    ││      │              │ ╭contour─────────────╮ │               │
││ ││  ▶ ││                                                                                    ││      ◉───────┐      ┌─│───●  │         ╭O1──────────────────╮│
││ ││  … ││                                                                                    ││      │       │      │ ◉───│──┘         │ ┌─● │              ││
││ ││    ││                                                                                    ││      ╰────────────────│───╯            ◉─┘ │ │              ││
││ ││    ││                                                                                    ││              │      │ ╰────────────────│───╯ │              ││
││ ││    ││                                                                                    ││              │      │                  ╰────────────────────╯│
││ ││    ││                                                                                    └───────────────│──────│────────────────────────┘               │
││ ││    ││                                                                                    ││              │ ╭L1.1────────────────╮                        │
││ ││    ││                                                                                    ││ ╭B1.1──────────│─────╮              │                        │
││ ││    ││                                                                                    ││ │            │ ◉────┘│              │                        │
││ ││    ││                                                                                    ││ │            └─│─────●              │                        │
││ ││    ││                                                                                    ││ │              ╰────────────────────╯                        │
││ ││    ││                                                                                    ││ ╰────────────────────╯                                       │
││ ││    ││                                                                                    ││                                                              │
││ ││    ││                                                                                    │└──────────────────────────────────────────────────────────────┘
││ ││    ││                                                                                    ││                                                              │
││ ││    ││                                                                                    ││                                                              │
││ ││    ││                                                                                    ││                                                              │
│└─┘└────┘┘                                                                                    ││                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded cable_banner_combos | Renders degraded at 160 cols — use ≥ 36 cols or reduce scale | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 0 back edge(s) | Scal│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
